--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="./src/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ecommerce store</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
+    </style>
   </head>
   <body>
     <div id="root"></div>
